Big fix: The dropdown menu for product selection is too long and extruding part will be clipped at table boundary. Solution: Set 'overflow' property of .dataTable_scrollBody to be visible.

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -395,3 +395,7 @@ html.dark table.dataTable tr.dt-hasChild td.dt-control:before,
     border-top-color: rgba(255, 255, 255, 0.5);
     border-left-color: transparent;
 }
+
+.bootstrap-select .dropdown-menu{
+    max-height: 300px !important;
+}
